Fix button alignment issue

--- a/style.css
+++ b/style.css
@@ -26,16 +26,27 @@ h1 {
 }
 
 .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 32px;
     color: #fff;
     background-color: #3498db;
-    width: 4vw;
-    padding: 25px;
-    margin: 50px 8px;
+    width: 80px;
+    height: 80px;
+    margin: 40px 8px;
     border: 1px solid #3498db;
     border-radius: 5px;
     cursor: pointer;
-    transition: all .4s ease-out;
+    transition: all 0.4s ease-out;
+}
+
+.button-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 /* Pulse */
